<resources>

    <string name="app_name">SmartCurrencyConverter</string>

    <!-- Logo -->
    <string name="logoDescripcion">Logo de la App</string>

    <!-- TITULOS -->

    <string name="titulo_app">Smart Currency Converter</string>

    <!-- HINTS -->

    <string name="hint_monto">Ingrese el monto</string>

    <!-- BOTONES -->

    <string name="btn_convertir">Convertir</string>
    <string name="btn_limpiar">Limpiar</string>
    <string name="btn_intercambiar">Intercambiar Monedas</string>

    <!-- TEXTOS -->
    <string name="txt_resultado_inicial">Resultado:</string>
    <string name="txt_resultado_final" translatable="false">%1$s %2$s</string>
    <string name="txt_moneda_origen">Moneda Origen</string>
    <string name="txt_moneda_destino">Moneda Destino</string>
    <string name="txt_sonido">Sonido ON</string>
    <string name="txt_sonido_desactivado">Sonido OFF</string>
    <string name="txt_seekbar_inicial">Nivel de conversión: 1.00x</string>
    <string name="txt_seekbar_valor">Nivel de conversión: %1$.2fx</string>

    <!-- MENSAJES -->

    <string name="msg_ingrese_monto">Ingrese el monto</string>
    <string name="msg_valor_invalido">"         Ingrese un valor válido mayor que cero     "</string>

    <string name="msg_monedas_diferentes">"         Seleccione monedas diferentes     "</string>

    <string name="msg_conversion_realizada">"         Conversión realizada     "</string>

    <string name="msg_campos_limpiados">
        Campos limpiados
    </string>

    <string name="msg_monedas_intercambiadas">
        Monedas intercambiadas
    </string>
    <string name="txt_idioma">Idioma</string>
    <string name="txt_tema">Modo oscuro</string>
    <string name="txtVideo">Video Local</string>

</resources>