<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#101820"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">


        <!-- Logo -->

        <!-- TITULO -->

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logoDescripcion"
            app:srcCompat="@drawable/logo_app" />

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/titulo_app"
            android:textColor="#FFFFFF"
            android:textSize="28sp"
            android:textStyle="bold" />


        <!-- CARD PRINCIPAL -->

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="#1E2A38"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <!-- MONTO -->

                <EditText
                    android:id="@+id/edtMonto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#4FC3F7"
                    android:hint="@string/hint_monto"
                    android:inputType="numberDecimal"
                    android:padding="12dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#B0BEC5" />

                <!-- MONEDA ORIGEN -->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/txt_moneda_origen"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinnerOrigen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/white" />

                <!-- BOTON INTERCAMBIAR -->

                <Button
                    android:id="@+id/btnIntercambiar"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="🔄" />

                <!-- MONEDA DESTINO -->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/txt_moneda_destino"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinnerDestino"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/white" />

                <!-- SWITCH -->

                <Switch
                    android:id="@+id/switchSonido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:checked="true"
                    android:text="@string/txt_sonido"
                    android:textColor="#FFFFFF" />

                <!-- SEEKBAR -->

                <TextView
                    android:id="@+id/txtNivelMultiplicador"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/txt_seekbar_inicial"
                    android:textColor="#FFFFFF" />

                <SeekBar
                    android:id="@+id/seekBarNivel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:progress="50" />

                <!-- PROGRESSBAR -->

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:max="100"
                    android:progress="0" />

                <!-- RESULTADO -->

                <TextView
                    android:id="@+id/txtResultado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:text="@string/txt_resultado_inicial"
                    android:textColor="#FFFFFF"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <!-- BOTON CONVERTIR -->

                <Button
                    android:id="@+id/btnConvertir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="#00BCD4"
                    android:text="@string/btn_convertir"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />


                <!-- BOTON LIMPIAR -->

                <Button
                    android:id="@+id/btnLimpiar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#F44336"
                    android:text="@string/btn_limpiar"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>